Menu de livros adicionado

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./banner.css">
     <link rel="stylesheet" href="./descricao.css">
     <link rel="stylesheet" href="./rodape.css">
+    <link rel="stylesheet" href="./categorias.css">
     
 </head>
 <body>
@@ -33,6 +34,28 @@
     </section>
     <section class="descricao">
         <p>Aqui você encontrará uma enorme variedade de livros católicos para aumentar a sua fé!</p>
+    </section>
+    <section class="lista-categorias">
+        <form class="botoes-categoria">
+            <button class="botao">Biografias</button>
+            <button type="button" class="botao"><a href="#">Escalada para o Paraíso</a></button>
+            <button type="button" class="botao"><a href="#">Santa Missa</a></button>
+            <button type="button" class="botao"><a href="#">Sacramentos</a></button> 
+            <button type="button" class="botao"><a href="#">Salve Rainha</a></button>  
+            <button type="button" class="botao"><a href="#">São José</a></button>
+            <button type="button" class="botao"><a href="#">Sagrado Coração de Jesus</a></button>
+            <button type="button" class="botao"><a href="#">Vocação Religiosa</a></button>
+            <button type="button" class="botao"><a href="#">Estudo Bíblico</a></button>
+            <button type="button" class="botao"><a href="#">Em defesa da fé Católica</a></button>
+            <button type="button" class="botao"><a href="#">História da Igreja</a></button>
+            <button type="button" class="botao"><a href="#">Quaresma</a></button>
+            <button type="button" class="botao"><a href="#">Advento e Natal</a></button>
+            <button type="button" class="botao"><a href="#">Pós-Vida</a></button>
+            <button type="button" class="botao"><a href="#">Espírito Santo</a></button>
+            <button type="button" class="botao"><a href="#">Devocional</a></button>  
+            <button type="button" class="botao"><a href="#">Ficção</a></button>
+            <button type="button" class="botao"><a href="#">Angeologia</a></button>
+        </form>
     </section>
     <footer class="rodape">
         <img alt="logo" class="logo-rodape" src="./img/Católico-Flix-logo.jpg">
